[gd_scene load_steps=7 format=3 uid="uid://d04lnq4yhp80o"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/TimelineContainer/timeline_container.gd" id="1_4mrhk"]
[ext_resource type="PackedScene" uid="uid://cgp6oftk1itbm" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/TimelineContainer/parts/TimelineItem/TimelineItem.tscn" id="2_hg1uk"]

[sub_resource type="Gradient" id="Gradient_q3i3u"]
offsets = PackedFloat32Array(0.0746269, 0.992537)
colors = PackedColorArray(0.427493, 0.427493, 0.427493, 0.356863, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r6wmq"]
gradient = SubResource("Gradient_q3i3u")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcjmk"]

[sub_resource type="GDScript" id="GDScript_2cu2y"]
script/source = "extends MouseInteractions

var onFocus:Callable = func():pass
var onBlur:Callable = func():pass

# --------------------------------------	
func on_focus(state:bool) -> void:
	if state:
		onFocus.call()
	else:
		onBlur.call()
# --------------------------------------	
"

[node name="TimelineContainer" type="MarginContainer"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_4mrhk")

[node name="Gradiant" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("GradientTexture2D_r6wmq")
flip_h = true

[node name="DetectorPanel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lcjmk")
script = SubResource("GDScript_2cu2y")

[node name="MarginContainer" type="MarginContainer" parent="DetectorPanel"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="ListScrollContainer" type="ScrollContainer" parent="DetectorPanel/MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 3

[node name="ListContainer" type="VBoxContainer" parent="DetectorPanel/MarginContainer/ListScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ActionQueueItem" parent="DetectorPanel/MarginContainer/ListScrollContainer/ListContainer" instance=ExtResource("2_hg1uk")]
layout_mode = 2
script = null
